frontend/test/should_fail/no_exec_in_evalhere_stmt.grg
rule retypeA
{
	modify {
	}
}

rule r2
{
	modify {
	---
		evalhere { exec(retypeA()); }
	}
}
